@@ -191,7 +191,6 @@
 		void SetupHardware(void);
 		void ResetHardware(void);
 
-		void EVENT_USB_Device_Disconnect(void);
 		void EVENT_USB_Device_UnhandledControlRequest(void);
 
 		#if defined(INCLUDE_FROM_BOOTLOADER_C)
